Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4468

Assertion `error != 0' fails or timeout occurs on select from a FEDERATED table which points at a non-existent table

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.2, 5.5.30
    • 10.0.4, 5.5.32
    • None

    Description

      Version: '5.5.30-MariaDB-debug-log'  socket: '/data/repo/bzr/5.5/mysql-test/var/tmp/mysqld.1.sock'  port: 16000  Source distribution
      mysqld: /home/elenst/bzr/5.5/sql/mysqld.cc:3157: void my_message_sql(uint, const char*, myf): Assertion `error != 0' failed.
      130502  3:48:45 [ERROR] mysqld got signal 6 ;

      #7  0x00007f29ef82f192 in __GI___assert_fail (assertion=0xd08a59 "error != 0", file=0xd07fb8 "/home/elenst/bzr/5.5/sql/mysqld.cc", line=3157, function=0xd0e3e0 "void my_message_sql(uint, const char*, myf)") at assert.c:103
      #8  0x000000000055f1c9 in my_message_sql (error=0, str=0x7f29e4f10d90 "Received error: 0 : ", MyFlags=0) at /home/elenst/bzr/5.5/sql/mysqld.cc:3157
      #9  0x0000000000ca6078 in my_printf_error (error=0, format=0xe54f78 "Received error: %d : %s", MyFlags=0) at /home/elenst/bzr/5.5/mysys/my_error.c:124
      #10 0x0000000000c03dd0 in ha_federatedx::info (this=0x7f29dc0430c8, flag=18) at /home/elenst/bzr/5.5/storage/federatedx/ha_federatedx.cc:3105
      #11 0x00000000006e1f36 in TABLE_LIST::fetch_number_of_rows (this=0x7f29dc0076a8) at /home/elenst/bzr/5.5/sql/table.cc:6698
      #12 0x00000000006470fe in make_join_statistics (join=0x7f29dc007d40, tables_list=..., conds=0x0, keyuse_array=0x7f29dc008048) at /home/elenst/bzr/5.5/sql/sql_select.cc:3191
      #13 0x0000000000640071 in JOIN::optimize (this=0x7f29dc007d40) at /home/elenst/bzr/5.5/sql/sql_select.cc:1209
      #14 0x00000000006469e1 in mysql_select (thd=0x2d77ad0, rref_pointer_array=0x2d7aad8, tables=0x7f29dc0076a8, wild_num=1, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7f29dc007d20, unit=0x2d7a1a8, select_lex=0x2d7a880) at /home/elenst/bzr/5.5/sql/sql_select.cc:3048
      #15 0x000000000063d5ea in handle_select (thd=0x2d77ad0, lex=0x2d7a0f8, result=0x7f29dc007d20, setup_tables_done_option=0) at /home/elenst/bzr/5.5/sql/sql_select.cc:318
      #16 0x000000000061643d in execute_sqlcom_select (thd=0x2d77ad0, all_tables=0x7f29dc0076a8) at /home/elenst/bzr/5.5/sql/sql_parse.cc:4641
      #17 0x000000000060ee8c in mysql_execute_command (thd=0x2d77ad0) at /home/elenst/bzr/5.5/sql/sql_parse.cc:2195
      #18 0x0000000000618cdc in mysql_parse (thd=0x2d77ad0, rawbuf=0x7f29dc0074c8 "select * from fed", length=17, parser_state=0x7f29e4f12500) at /home/elenst/bzr/5.5/sql/sql_parse.cc:5759
      #19 0x000000000060c3dc in dispatch_command (command=COM_QUERY, thd=0x2d77ad0, packet=0x2e6d061 "select * from fed", packet_length=17) at /home/elenst/bzr/5.5/sql/sql_parse.cc:1068
      #20 0x000000000060b61d in do_command (thd=0x2d77ad0) at /home/elenst/bzr/5.5/sql/sql_parse.cc:794
      #21 0x00000000007109c1 in do_handle_one_connection (thd_arg=0x2d77ad0) at /home/elenst/bzr/5.5/sql/sql_connect.cc:1266
      #22 0x00000000007103a8 in handle_one_connection (arg=0x2d77ad0) at /home/elenst/bzr/5.5/sql/sql_connect.cc:1181
      #23 0x000000000095d6fc in pfs_spawn_thread (arg=0x2e12850) at /home/elenst/bzr/5.5/storage/perfschema/pfs.cc:1015
      #24 0x00007f29f05ffe9a in start_thread (arg=0x7f29e4f13700) at pthread_create.c:308
      #25 0x00007f29ef8f3cbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      Test case:

      # Run with --federated
       
      create table t1 (a int);
      eval create table fed engine=Federated CONNECTION='mysql://root@127.0.0.1:$MASTER_MYPORT/test/t1';
      drop table t1;
      select * from fed;

      revision-id: wlad@montyprogram.com-20130429222947-so2nbrsb1t03hnp6
      revno: 3739
      branch-nick: 5.5

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.